--- a/DataMadness.ipynb
+++ b/DataMadness.ipynb
@@ -35,7 +35,8 @@
     "Our use of The World Happiness data is for explanatory purposes. We are trying to explain why some countries are happier than others. This does not entail any personal privacy risks, thus there is very little ethical risks when at the individual level. Where ethics comes into consideration is when we draw our conclusions and the manor in which we explain a given countries happiness. There is a risk of being insensitive, biased and perhaps even racist. Throughout our work we had to be hyper aware of what conclusions we drew and how we got our message across\n",
     "\n",
     "\n",
-    "Collab link (some of the diagrams don't appear on github): https://colab.research.google.com/drive/1mhubeHGLrVHtMArnibjuWo0VAWZv7LVx?usp=sharing"
+    "Collab link (some of the diagrams don't appear on github): https://colab.research.google.com/drive/1mhubeHGLrVHtMArnibjuWo0VAWZv7LVx?usp=sharing\n",
+    "Youtube link to our explanatory video: https://youtu.be/bLd4wNz5NxY"
    ],
    "metadata": {
     "id": "FaeUJS-iBXgy"
